# graphics

./: .gitignore  BVH.cpp  BVH.h  BoundingBox.cpp  BoundingBox.h  CMakeCache.txt  CMakeLists.txt  Floor.cpp  Floor.h  Intersection.h  LineSegment.cpp  LineSegment.h  Makefile  OpenGLStuff.cpp  OpenGLStuff.h  Phong.cpp  Phong.h  Plane.h  Program.h  README.md  RandomUtils.cpp  RandomUtils.h  Ray.h  RigidBody.h  Shadow.cpp  Shadow.h  Sphere.cpp  Sphere.h  Triangle.h  Wire.cpp  Wire.h  a.out  assignment.cc  balls.cpp  boids.cpp  catmull.cpp  cmake_install.cmake  main.cpp  octree.cpp  octree.h  (+2 more)
include/data_structures/: BVH.h  octree.h
include/geometry/: BoundingBox.h  Geometry.h  Plane.h  Quad.h  Ray.h  Sphere.h  Triangle.h
include/helpers/: RandomUtils.h
include/physics/: Intersection.h  RigidBody.h  Spring.h
include/render/: Floor.h  LineSegment.h  OpenGLStuff.h  Shadow.h  Wire.h
shaders/: basic.vert  floor.geom  line.geom  phong.frag  phong.geom  phong.vert  shadow.vert  wire.geom
src/: balls.cpp  boids.cpp  catmull.cpp  cloth.cpp  laplace_smooth.cpp  loop_subdivision.cpp  spacial.cpp
src/data_structures/: BVH.cpp  octree.cpp
src/geometry/: BoundingBox.cpp  Sphere.cpp  Triangle.cpp
src/helpers/: RandomUtils.cpp
src/physics/: Spring.cpp
src/render/: Floor.cpp  LineSegment.cpp  OpenGLStuff.cpp  Phong.cpp  Shadow.cpp  Wire.cpp
src/render/shaders/: floor.frag  line.frag  phong.frag  shadow.frag  shadow.geom
